src/styles/_custom-classes.scss
@use './mixins' as *;

.custom-margin-top {
	@include set-margin('top', 5rem);
}

.custom-margin-bottom {
	@include set-margin('bottom', 2rem);
}

.icons-bar-margin {
	@include set-margin("top", 1.5rem);
}

.custom-btn-border {
	border: solid 2px black;
}

.custom-header {
	font-size: calc(2rem + 1.5vw);
}

.custom-position {
	top: 70px;
	left: -12px;
	background-color: white;
	height: 100vh;
	width: 100vw;
}

.nav-item:hover {
	cursor: pointer;
	&:not(.navbar-nav > &:last-child) {
		background-color: #e1e1e1;
		text-decoration: underline;
		text-underline-offset: 2px;
		border-radius: 5px;
	}
}

